--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,28 @@
-body{
+.containner{
     background-image: linear-gradient(to right, grey, rgba(0, 255, 179, 0.274));
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     margin: 0px;
     align-items: center;
     text-align: center;
     padding: 70px;
 }
-.containner{
-   
+.box-right{
     width: 500px;
-    height:500px; 
+    height:400px; 
     color: #fff;
     border: 2px solid #fff;
     display: flex;
     border-radius: 10px;
     flex-direction: column;
-    
     align-items: center ;
     gap: 1.2rem;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    
 }
- h1{
+.box-right h1{
   
    font-family: sans-serif;
    color: #fff;
@@ -32,19 +33,29 @@ body{
    
 }
 
- input{
+.box-right input{
     border-radius: 20px;
-    border: 1.5px solid #fff;
+    gap: 1.2rem;
     width: 200px;
     height: 25px;
-    background: rgba(255, 102, 0, 0);
+    background: rgba(252, 249, 247, 0.068);
+ 
+}
+.box-right label{
+    color: rgb(255, 255, 255);
     position: relative;
-    right: 70px;
+    right: 60PX;
 }
 button{
-    background-color: aqua;
+    background-color: rgb(251, 255, 253);
+    border-radius: 20px;
+    width: 200px;
+    height: 25px;
 }
 .box-left img{
-    height: 500px; 
+    height: 400px; 
     border-radius: 20px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+   
 }
